--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 <div class="features" id="features">
     <div class="title">Features of RAD</div>
-    <div class="subtitle">We provide you the best features in RAD!</div>
+    <div class="subtitle">We provide you the best features with RAD!</div>
     <div class="cards">
         <div class="card" style="width: 18rem;">
         <div class="card-body">
@@ -70,9 +70,6 @@
             </div>
         </div>
     </div>
-</div>
-<div class="footer">
-    Created by LordDamionDevil
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
