change bot list url

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<img src="https://images.discordapp.net/avatars/685408280679677993/3f468cf844ba57eb6889d7a4164b1523.png?size=512" style="border-radius:50%;" />
     <h1 class="display-5 title">It's time to use RAD in your server.</h1>
     <p class="subtitle">RAD is a simple bot for listening to radio stations.</p>
-    <a class="btn btn-primary btn-lg" href="https://discord.bots.gg/bots/685408280679677993" role="button">Get started</a>
+    <a class="btn btn-primary btn-lg" href="https://bots.ondiscord.xyz/bots/685408280679677993" role="button">Get started</a>
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features" id="features">
