--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     Documentation
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Commands</a>
+					<a class="dropdown-item" href="https://rad.xlr.wtf/docs#setup">Setup</a>
+                    <a class="dropdown-item" href="https://rad.xlr.wtf/docs#commands">Commands</a>
                 </div>
             </li>
         </ul>
