--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 </nav>
 <div class="heading text-center">
-	<img src="https://images.discordapp.net/avatars/685408280679677993/bae8e63fb26de38ab5e3f7312bf231a5.png?size=256" style="border-radius:50%;" />
+	<img ci-src="https://images.discordapp.net/avatars/685408280679677993/bae8e63fb26de38ab5e3f7312bf231a5.png?size=256" style="border-radius:50%;" ci-ratio="1.5" />
     <h1 class="display-5 title">It's time to use RAD in your server.</h1>
     <p class="subtitle">RAD is a simple bot for listening to radio stations.</p>
     <a class="btn btn-primary btn-lg" href="https://bots.ondiscord.xyz/bots/685408280679677993" role="button">Bots On Discord</a>&nbsp;<a class="btn btn-primary btn-lg" href="https://top.gg/bot/685408280679677993" role="button">top.gg</a>
@@ -67,5 +67,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="js/now-ui-kit.min.js"></script>
+<script src="https://cdn.scaleflex.it/plugins/js-cloudimage-responsive/4.5.0/js-cloudimage-responsive.min.js"></script>
+<script>
+    const ciResponsive = new window.CIResponsive({
+      token: 'aoplufimko'
+    });
+</script>
 </body>
 </html>
