--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 </nav>
 <div class="heading text-center">
-	<img ci-src="https://images.discordapp.net/avatars/685408280679677993/bae8e63fb26de38ab5e3f7312bf231a5.png?size=256" style="border-radius:50%;" ci-ratio="1.5" />
+	<img ci-src="https://images.discordapp.net/avatars/685408280679677993/bae8e63fb26de38ab5e3f7312bf231a5.png?size=256" style="border-radius:50%;" />
     <h1 class="display-5 title">It's time to use RAD in your server.</h1>
     <p class="subtitle">RAD is a simple bot for listening to radio stations.</p>
     <a class="btn btn-primary btn-lg" href="https://bots.ondiscord.xyz/bots/685408280679677993" role="button">Bots On Discord</a>&nbsp;<a class="btn btn-primary btn-lg" href="https://top.gg/bot/685408280679677993" role="button">top.gg</a>
