change page add metadata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/now-ui-kit.css">
+    <meta name="theme-color" content="#A57DFF">
+    <meta name="title" content="RAD">
+    <meta name="description" content="RAD allows your server to listen to 24/7 radio stations which were requested by the community you can learn more by visiting the site.">
+    <meta name="keywords" content="music, radio, discord, bot">
+    <link rel="icon" sizes="256x256" href="https://cdn.discordapp.com/app-icons/685408280679677993/16c0d1624a88a3f785e66c1d6da9026e.png?size=256">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800&display=swap" rel="stylesheet">
     <title>RAD</title>
 </head>
@@ -30,7 +35,7 @@
 	<img src="https://cdn.discordapp.com/app-icons/685408280679677993/16c0d1624a88a3f785e66c1d6da9026e.png?size=256" style="border-radius:50%;" />
     <h1 class="display-5 title">It's time to use RAD in your server.</h1>
     <p class="subtitle">RAD is a simple bot for listening to radio stations.</p>
-    <a class="btn btn-primary btn-lg" href="https://bots.ondiscord.xyz/bots/685408280679677993" role="button">Bots On Discord</a>&nbsp;<a class="btn btn-primary btn-lg" href="https://top.gg/bot/685408280679677993" role="button">top.gg</a>
+    <a class="btn btn-primary btn-lg" href="https://top.gg/bot/685408280679677993" role="button">Add the bot to your server</a>
     <br /><br /><br /><br /><br /><br />
 </div>
 <div class="features" id="features">
